--- a/index.html
+++ b/index.html
@@ -1,1 +1,250 @@
-hello world!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="genux.org">
+
+    <title>Stylish Portfolio Template for Bootstrap</title>
+	<!-- prettify -->
+	<link href="css/prettify.css" type="text/css" rel="stylesheet"/>
+    
+	<!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- Add custom CSS here -->
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	
+  </head>
+
+  <body onload="prettyPrint()">
+
+    <!-- Side Menu -->
+    <a id="menu-toggle" href="#" class="btn btn-primary btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+        <li class="sidebar-brand"><a href="http://jetty-bootstrap.io">Jetty Bootstrap</a></li>
+        <li><a href="#top">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#benefits">Benefits</a></li>
+        <li><a href="#portfolio">Documentation</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    <!-- /Side Menu -->
+  
+    <!-- Full Page Image Header Area -->
+    <div id="top" class="header">
+      <div class="vert-text">
+        <h1>Jetty Bootstrap</h1>
+        <h3><em>The</em> Open Source Jetty web server, <em>bootstrap</em> library</h3>
+        <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
+      </div>
+    </div>
+    <!-- /Full Page Image Header Area -->
+  
+    <!-- Intro -->
+    <div id="about" class="intro">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 text-center">
+            <h2>Make it easy to embed jetty into your standalone application!</h2>
+            <p class="lead">Builbding a standalone application with an embedded application web server has never been so simple</p> 
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+			<pre class="prettyprint">JettyBootstrap bootstrap = new JettyBootstrap();
+bootstrap.addWar("/tmp/webapp.war");
+bootstrap.startJetty();</pre>
+			<p class="text-center">Now you can access your web application browsing http://localhost:8080</p>
+						<p class="text-center"><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap">See the project on GitHub</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Intro -->
+  
+    <!-- Services -->
+    <div id="benefits" class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 text-center">
+            <h2>Benefits</h2>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2 col-md-offset-2 text-center">
+            <div class="service-item">
+              <i class="service-icon fa fa-rocket"></i>
+              <h4>Powerful</h4>
+              <p>Based on <a target="_blank" href="http://www.eclipse.org/jetty/">Jetty</a>, the amazing lightweight open source web server supported by Eclipse Foundation.</p>
+            </div>
+          </div>
+          <div class="col-md-2 text-center">
+            <div class="service-item">
+              <i class="service-icon fa fa-magnet"></i>
+              <h4>Integrated</h4>
+              <p>Need to build a standalone application with an embedded web server? Jetty-Boostrap does that for you.</p>
+            </div>
+          </div>
+          <div class="col-md-2 text-center">
+            <div class="service-item">
+              <i class="service-icon fa fa-cogs"></i>
+              <h4>Configurable</h4>
+              <p>Every setting has a default and can be specified either by the application itself or using system properties.</p>
+            </div>
+          </div>
+          <div class="col-md-2 text-center">
+            <div class="service-item">
+              <i class="service-icon fa fa-puzzle-piece"></i>
+              <h4>Flexible</h4>
+              <p>The jetty-bootstrap library has been built in such a way that it is easy to tune and extend.</p>
+            </div>
+          </div>
+        </div>
+		
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 text-center">
+			  <hr>
+			  <p>Code licensed under <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a></p>
+          </div>
+        </div>
+		
+      </div>
+    </div>
+    <!-- /Services -->
+
+    <!-- Callout -->
+    <div class="callout">
+      <div class="vert-text">
+        <h1>Getting Started</h1>
+      </div>
+    </div>
+    <!-- /Callout -->
+
+    <!-- Documentation -->
+    <div id="portfolio" class="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 text-center">
+            <h2>Documentation</h2>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2 text-center">
+            <div class="portfolio-item">
+				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Configuration"><i class="service-icon fa fa-cogs"></i></a>
+              <h4>Configuration</h4>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div class="portfolio-item">
+				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Deploy-application"><i class="service-icon fa fa-fighter-jet"></i></a>
+              <h4>Deployment</h4>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2 text-center">
+            <div class="portfolio-item">
+				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Maven-packaging"><i class="service-icon fa fa-archive"></i></a>
+              <h4>Packaging</h4>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div class="portfolio-item">
+				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Examples"><i class="service-icon fa fa-terminal"></i></a>
+              <h4>Samples</h4>
+            </div>
+          </div>
+        </div>
+		
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 text-center">
+            <hr>
+			<p><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap/wiki">wiki documentation</a></p>
+          </div>
+        </div>
+		
+      </div>
+    </div>
+    <!-- /Documentation -->
+
+    <!-- Call to Action -->
+    <div class="call-to-action">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 text-center">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Call to Action -->
+    
+    <!-- Footer -->
+    <footer>
+      <div id="contact" class="container">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 text-center">
+            <ul class="list-inline">
+              <li><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap"><i class="fa fa-github fa-3x"></i></a></li>
+              <li><i class="fa fa-google-plus-square fa-3x"></i></li>
+              <li><i class="fa fa-facebook fa-3x"></i></li>
+            </ul>
+            <div class="top-scroll">
+              <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
+            </div>
+            <hr>
+            <p>Copyright &copy; Genux.org 2013</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- /Footer -->
+
+    <!-- JavaScript -->
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script>
+	
+	<!-- prettify -->
+	<script type="text/javascript" src="js/prettify.js"></script>
+
+    <!-- Custom JavaScript for the Side Menu and Smooth Scrolling -->
+    <script>
+        $("#menu-close").click(function(e) {
+            e.preventDefault();
+            $("#sidebar-wrapper").toggleClass("active");
+        });
+    </script>
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#sidebar-wrapper").toggleClass("active");
+        });
+    </script>
+    <script>
+      $(function() {
+        $('a[href*=#]:not([href=#])').click(function() {
+          if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') 
+            || location.hostname == this.hostname) {
+
+            var target = $(this.hash);
+            target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+            if (target.length) {
+              $('html,body').animate({
+                scrollTop: target.offset().top
+              }, 1000);
+              return false;
+            }
+          }
+        });
+      });
+    </script>
+
+  </body>
+
+</html>
