--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="genux.org">
 
-    <title>Stylish Portfolio Template for Bootstrap</title>
+    <title>Jetty-Bootstrap Library</title>
 	<!-- prettify -->
 	<link href="css/prettify.css" type="text/css" rel="stylesheet"/>
     
