updates code sample

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="col-md-6 col-md-offset-3">
 			<pre class="prettyprint">JettyBootstrap bootstrap = new JettyBootstrap();
-bootstrap.addWar("/tmp/webapp.war");
+bootstrap.addWarApp("/tmp/webapp.war");
 bootstrap.startJetty();</pre>
 			<p class="text-center">Now you can access your web application browsing http://localhost:8080</p>
 						<p class="text-center"><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap">See the project on GitHub</a></p>
