change organization name to teknux.org updated code sample add keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="genux.org">
+    <meta name="author" content="teknux.org">
+	<meta name="keywords" content="java library jetty embedded">
 
     <title>Jetty-Bootstrap Library</title>
 	<!-- prettify -->
@@ -40,7 +41,7 @@
     <div id="top" class="header">
       <div class="vert-text">
         <h1>Jetty Bootstrap</h1>
-        <h3><em>The</em> Open Source Jetty web server, <em>bootstrap</em> library</h3>
+        <h3><em>The</em> Open Source Jetty <em>starter kit</em> library to quickly build standalone application</h3>
         <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
       </div>
     </div>
@@ -52,12 +53,12 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <h2>Make it easy to embed jetty into your standalone application!</h2>
-            <p class="lead">Builbding a standalone application with an embedded application web server has never been so simple</p> 
+            <p class="lead">Builbding a standalone application with an embedded application web server has never been so simple</p>
           </div>
           <div class="col-md-6 col-md-offset-3">
 			<pre class="prettyprint">JettyBootstrap bootstrap = new JettyBootstrap();
 bootstrap.addWarApp("/tmp/webapp.war");
-bootstrap.startJetty();</pre>
+bootstrap.startServer();</pre>
 			<p class="text-center">Now you can access your web application browsing http://localhost:8080</p>
 						<p class="text-center"><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap">See the project on GitHub</a></p>
           </div>
@@ -199,7 +200,7 @@ bootstrap.startJetty();</pre>
               <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
             </div>
             <hr>
-            <p>Copyright &copy; Genux.org 2013</p>
+            <p>Copyright &copy; teknux.org 2013</p>
           </div>
         </div>
       </div>
