Change URL from https://github.com/oeil54/jetty-bootstrap to http://teknux.org/jetty-bootstrap

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 bootstrap.addWarApp("/tmp/webapp.war");
 bootstrap.startServer();</pre>
 			<p class="text-center">Now you can access your web application browsing http://localhost:8080</p>
-						<p class="text-center"><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap">See the project on GitHub</a></p>
+						<p class="text-center"><a target="_blank" href="http://teknux.org/jetty-bootstrap">See the project on GitHub</a></p>
           </div>
         </div>
       </div>
@@ -138,13 +138,13 @@ bootstrap.startServer();</pre>
         <div class="row">
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
-				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Configuration"><i class="service-icon fa fa-cogs"></i></a>
+				<a href="http://teknux.org/jetty-bootstrap/wiki/Configuration"><i class="service-icon fa fa-cogs"></i></a>
               <h4>Configuration</h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Deploy-application"><i class="service-icon fa fa-fighter-jet"></i></a>
+				<a href="http://teknux.org/jetty-bootstrap/wiki/Deploy-application"><i class="service-icon fa fa-fighter-jet"></i></a>
               <h4>Deployment</h4>
             </div>
           </div>
@@ -152,13 +152,13 @@ bootstrap.startServer();</pre>
         <div class="row">
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
-				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Maven-packaging"><i class="service-icon fa fa-archive"></i></a>
+				<a href="http://teknux.org/jetty-bootstrap/wiki/Maven-packaging"><i class="service-icon fa fa-archive"></i></a>
               <h4>Packaging</h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-				<a href="https://github.com/oeil54/jetty-bootstrap/wiki/Examples"><i class="service-icon fa fa-terminal"></i></a>
+				<a href="http://teknux.org/jetty-bootstrap/wiki/Examples"><i class="service-icon fa fa-terminal"></i></a>
               <h4>Samples</h4>
             </div>
           </div>
@@ -167,7 +167,7 @@ bootstrap.startServer();</pre>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
             <hr>
-			<p><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap/wiki">wiki documentation</a></p>
+			<p><a target="_blank" href="http://teknux.org/jetty-bootstrap/wiki">wiki documentation</a></p>
           </div>
         </div>
 		
@@ -192,7 +192,7 @@ bootstrap.startServer();</pre>
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline">
-              <li><a target="_blank" href="https://github.com/oeil54/jetty-bootstrap"><i class="fa fa-github fa-3x"></i></a></li>
+              <li><a target="_blank" href="http://teknux.org/jetty-bootstrap"><i class="fa fa-github fa-3x"></i></a></li>
               <li><i class="fa fa-google-plus-square fa-3x"></i></li>
               <li><i class="fa fa-facebook fa-3x"></i></li>
             </ul>
