Add link to teknux.org

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ bootstrap.startServer();</pre>
               <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
             </div>
             <hr>
-            <p>Copyright &copy; teknux.org 2013</p>
+            <p>Copyright &copy; <a target="_blank" href="http://teknux.org">teknux.org</a> 2013</p>
           </div>
         </div>
       </div>
