Remove Google+ Verification link and add link on Google+ Image

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ bootstrap.startServer();</pre>
           <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline">
               <li><a target="_blank" href="https://github.com/teknux-org/jetty-bootstrap"><i class="fa fa-github fa-3x"></i></a></li>
-              <li><i class="fa fa-google-plus-square fa-3x"></i><a href="https://plus.google.com/105562057349375423279" rel="publisher">Google+</a></li>
+              <li><a target="_blank" href="https://plus.google.com/105562057349375423279"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
               <li><i class="fa fa-facebook fa-3x"></i></li>
             </ul>
             <div class="top-scroll">
