Add Facebook link

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ bootstrap.startServer();</pre>
             <ul class="list-inline">
               <li><a target="_blank" href="https://github.com/teknux-org/jetty-bootstrap"><i class="fa fa-github fa-3x"></i></a></li>
               <li><a target="_blank" href="https://plus.google.com/105562057349375423279"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
-              <li><i class="fa fa-facebook fa-3x"></i></li>
+              <li><a target="_blank" href="https://www.facebook.com/jettybootstrap"><i class="fa fa-facebook fa-3x"></i></a></li>
             </ul>
             <div class="top-scroll">
               <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
